--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "my-component",
+  "name": "capacitor-google-maps",
   "version": "0.0.1",
   "description": "Stencil Component Starter",
-  "main": "dist/mycomponent.js",
+  "main": "dist/capacitorgooglemaps.js",
   "types": "dist/types/index.d.ts",
   "collection": "dist/collection/collection-manifest.json",
   "files": [
     "dist/"
   ],
-  "browser": "dist/mycomponent.js",
+  "browser": "dist/capacitorgooglemaps.js",
   "scripts": {
     "build": "stencil build",
     "dev": "sd concurrent \"stencil build --dev --watch\" \"stencil-dev-server\" ",
@@ -18,24 +18,23 @@
     "test.watch": "jest --watch --no-cache"
   },
   "dependencies": {
+    "@capacitor/core": "^1.0.0-alpha.23",
     "@stencil/core": "^0.6.18"
   },
   "devDependencies": {
     "@stencil/dev-server": "latest",
     "@stencil/utils": "latest",
+    "@types/googlemaps": "^3.30.8",
     "@types/jest": "^21.1.1",
-    "jest": "^21.2.1"
+    "jest": "^21.2.1",
+    "tslib": "^1.9.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ionic-team/stencil-component-starter.git"
+    "url": "git+https://github.com/joshuamorony/capacitor-google-maps.git"
   },
-  "author": "Ionic Team",
+  "author": "Joshua Morony",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ionic-team/stencil"
-  },
-  "homepage": "https://github.com/ionic-team/stencil",
   "jest": {
     "transform": {
       "^.+\\.(ts|tsx)$": "<rootDir>/node_modules/@stencil/core/testing/jest.preprocessor.js"
